# HomeWorkHelper

./: .gitignore  CMakeLists.txt  LICENSE
App/: CMakeLists.txt  main.cpp
App/source/: main.cpp
Common/: CMakeLists.txt
Common/Math/: MathGenerator.cpp  MathGenerator.h  Vec2.cpp  Vec2.h
Common/Math/Solvers/: Add.cpp  Add.h  Divide.cpp  Divide.h  Multiply.cpp  Multiply.h  SolverBase.cpp  SolverBase.h  Subtract.cpp  Subtract.h
Common/include/: Vec2.h
GUI/: CMakeLists.txt
GUI/ImguiComponents/: Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  CollapsableHeader.cpp  CollapsableHeader.h  ComboBox.cpp  ComboBox.h  ComboItem.cpp  ComboItem.h  FloatField.cpp  FloatField.h  ImGuiID.cpp  ImGuiID.h  ImguiComponent.cpp  ImguiComponent.h  IntField.cpp  IntField.h  IntSlider.cpp  IntSlider.h  Label.cpp  Label.h  MenuBar.cpp  MenuBar.h  MenuItem.cpp  MenuItem.h  MenuTab.cpp  MenuTab.h  NumberField.cpp  NumberField.h  RadioButton.cpp  RadioButton.h  SameLine.cpp  SameLine.h  SeparatorLine.cpp  SeparatorLine.h  Textfield.cpp  Textfield.h  TreeNode.cpp  TreeNode.h  (+2 more)
GUI/Test/: TestFunctions.h  TestVulkanData.cpp  TestVulkanData.h  TestWindow.cpp  TestWindow.h
GUI/Window/: HomeworkWindow.cpp  HomeworkWindow.h  TestWindow.cpp  TestWindow.h  Window.cpp  Window.h  WindowHandler.cpp  WindowHandler.h
GUI/include/: GUIIncludes.h  HomeworkWindow.h  MainWindow.h  Window.h  WindowHandler.h
GUI/source/: HomeworkWindow.cpp  MainWindow.cpp  Window.cpp  WindowHandler.cpp
